force-app/main/default/objects/NS_AccountRelation__c/NS_AccountRelation__c.object-meta.xml
<CustomObject>
    <description>Non parent/child affiliation relations between NS accounts</description>
    <label>Account Relation</label>
    <nameField>
        <displayFormat>AR{0000000000}</displayFormat>
        <label>Relation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Relations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>