force-app/main/default/objects/NS_AccountRelation__c/fields/NS_External_ID__c.field-meta.xml
<CustomField>
    <fullName>NS_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>