force-app/main/default/objects/NS_AccountRelation__c/fields/NS_External_ID_Formula__c.field-meta.xml
<CustomField>
    <fullName>NS_External_ID_Formula__c</fullName>
    <formula>NS_RelationParty1__r.NS_External_ID__c  + &#39;_&#39;+ NS_RelationParty2__r.NS_External_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>External ID Formula</label>
    <type>Text</type>
</CustomField>