force-app/main/default/objects/NS_AccountRelation__c/fields/NS_RelationDescription__c.field-meta.xml
<CustomField>
    <fullName>NS_RelationDescription__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>