force-app/main/default/objects/NS_AccountRelation__c/fields/NS_RelationParty1__c.field-meta.xml
<CustomField>
    <fullName>NS_RelationParty1__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>From Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Relationships</relationshipLabel>
    <relationshipName>NS_AccountRelation_Party1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>