force-app/main/default/objects/NS_AccountRelation__c/fields/NS_RelationParty2__c.field-meta.xml
<CustomField>
    <fullName>NS_RelationParty2__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>To Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Relations Party2</relationshipLabel>
    <relationshipName>NS_AccountRelations_Party2</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>