force-app/main/default/objects/NS_AccountRelation__c/fields/NS_RelationType__c.field-meta.xml
<CustomField>
    <fullName>NS_RelationType__c</fullName>
    <label>Relation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Autoramp</fullName>
            </value>
            <value>
                <fullName>Warehouse</fullName>
            </value>
            <value>
                <fullName>Dock</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>